--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 subprojects {
     apply plugin: 'java'
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 
     repositories {
         mavenCentral()
