--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,47 @@
+ext {
+    dubboVersion='2.7.8'
+    seataVersion='1.4.0'
+    nacosClientVerison='1.3.0'
+    druidVersion='1.1.10'
+    springbootVerison='2.2.2.RELEASE'
+    lombokVersion='1.16.22'
+}
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
 
     repositories {
         mavenCentral()
+        mavenLocal()
     }
-    dependencies{
+    dependencies {
         implementation 'com.google.protobuf:protobuf-java:3.18.0'
-        implementation 'com.alibaba:dubbo-registry-nacos:0.0.1'
-        implementation 'com.alibaba:dubbo:2.6.5'
+        implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
+        implementation "org.springframework.boot:spring-boot-starter:${springbootVerison}"
+
+        implementation "com.alibaba:druid:${druidVersion}"
+        implementation 'mysql:mysql-connector-java:5.1.47'
+
+        implementation "org.apache.dubbo:dubbo:${dubboVersion}"
+        implementation "org.apache.dubbo:dubbo-spring-boot-starter:${dubboVersion}"
+        implementation "org.apache.dubbo:dubbo-config-spring:${dubboVersion}"
+
+        implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
+
+        implementation "com.alibaba:dubbo-registry-nacos:${dubboVersion}"
+
+        implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
+
+
+
         implementation 'io.netty:netty-all:4.1.32.Final'
         implementation 'com.alibaba.spring:spring-context-support:1.0.2'
+
+
+        implementation "org.projectlombok:lombok:${lombokVersion}"
+
     }
 }
 
