--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 ext {
-    dubboVersion='2.7.8'
-    seataVersion='1.4.0'
-    nacosClientVerison='1.3.0'
-    druidVersion='1.1.10'
-    springbootVerison='2.2.2.RELEASE'
-    lombokVersion='1.16.22'
+    dubboVersion = '3.0.3'
+    seataVersion = '1.4.0'
+    nacosClientVerison = '1.3.0'
+    druidVersion = '1.2.6'
+    springbootVerison = '2.5.5'
+    lombokVersion = '1.18.2'
+    slf4jVersion = '1.7.22'
+    logbackVersion = '1.1.10'
 }
 subprojects {
     apply plugin: 'java'
@@ -12,6 +14,10 @@ subprojects {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
 
+    configurations.all {
+        exclude group: "commons-logging", module: "commons-logging"
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
     repositories {
         mavenCentral()
         mavenLocal()
@@ -21,27 +27,34 @@ subprojects {
         implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
         implementation "org.springframework.boot:spring-boot-starter:${springbootVerison}"
 
+        implementation 'org.mybatis:mybatis:3.5.7'
         implementation "com.alibaba:druid:${druidVersion}"
-        implementation 'mysql:mysql-connector-java:5.1.47'
+        implementation 'mysql:mysql-connector-java:8.0.26'
+        implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 
-        implementation "org.apache.dubbo:dubbo:${dubboVersion}"
+        implementation("org.apache.dubbo:dubbo:${dubboVersion}") {
+            exclude group: 'org.springframework', module: 'spring'
+        }
         implementation "org.apache.dubbo:dubbo-spring-boot-starter:${dubboVersion}"
         implementation "org.apache.dubbo:dubbo-config-spring:${dubboVersion}"
+        implementation 'com.alibaba.spring:spring-context-support:1.0.11'
 
         implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
 
-        implementation "com.alibaba:dubbo-registry-nacos:${dubboVersion}"
+        implementation "org.apache.dubbo:dubbo-registry-nacos:${dubboVersion}"
+
 
         implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
 
 
-
         implementation 'io.netty:netty-all:4.1.32.Final'
-        implementation 'com.alibaba.spring:spring-context-support:1.0.2'
 
 
+        implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+        implementation "ch.qos.logback:logback-core:${logbackVersion}"
+        implementation "ch.qos.logback:logback-classic:${logbackVersion}"
         implementation "org.projectlombok:lombok:${lombokVersion}"
-
+        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     }
 }
 
