--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -1,2 +1,48 @@
 server:
   port: 8880
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/seata?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: root
+    password: root
+  application:
+    name: dubbo-storage-example
+
+dubbo:
+  application:
+    id: dubbo-storage-example
+    name: dubbo-storage-example
+    qosEnable: false
+    metadata-type: remote
+  protocol:
+    id: dubbo
+    name: dubbo
+    port: 20888
+  registry:
+    id: dubbo-storage-example-registry
+    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+  config-center:
+    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+  metadata-report:
+    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+
+seata:
+  enabled: true
+  application-id: storage-seata-example
+  tx-service-group: storage-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
+  registry:
+    type: nacos
+    nacos:
+      server-addr: localhost:8848
+      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+      cluster: default
+  config:
+    type: nacos
+    nacos:
+      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+      server-addr: localhost:8848
+      group: SEATA_GROUP
+  enable-auto-data-source-proxy: true
+  data-source-proxy-mode: AT
