--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -5,7 +5,8 @@ plugins {
 
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
