--- a/business/src/main/resources/application.yml
+++ b/business/src/main/resources/application.yml
@@ -1,1 +1,32 @@
+server:
+  port: 4001  # 端口号
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/wf?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: root
+    password: rr998xhz1997
+  application:
+    name: business
 
+seata:
+  #enabled: true
+  application-id: ${spring.application.name}
+  tx-service-group: default_tx_group      # 默认值，有的版本使用 my_test_tx_group
+  service:
+    vgroupMapping: # 这里使用 vgroupMapping 和 vgroup-mapping 都可以
+      default_tx_group: default
+    grouplist:
+      default: 127.0.0.1:8091
+dubbo:
+  application:
+    name: dubbo-springboot-demo-provider
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    address: nacos://127.0.0.1:8848
+nacos:
+  discovery:
+    server-addr: localhost:8848
+    group: SEATA_GROUP
