--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,13 +1,23 @@
 server:
   port: 8880
+spring:
+  application:
+    name: accout
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/wf?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: root
+    password: rr998xhz1997
+seata:
+  #enabled: true
+  application-id: ${spring.application.name}
+  tx-service-group: default_tx_group      # 默认值，有的版本使用 my_test_tx_group
+  service:
+    vgroupMapping: # 这里使用 vgroupMapping 和 vgroup-mapping 都可以
+      default_tx_group: default
+    grouplist:
+      default: 127.0.0.1:8091
 nacos:
-  service-address: 127.0.0.1
-  port: 8848
-dubbo:
-  registry:
-    address: nacos://${nacos.service-address}:${nacos.port}
-  protocol:
-    name: dubbo
-    port: 20881
-  scan:
-    base-packages: cn.raysonblog.*.service.impl
+  discovery:
+    server-addr: localhost:8848
+    group: SEATA_GROUP
