--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 ext {
     dubboVersion = '3.0.3'
-    seataVersion = '1.4.0'
+    seataVersion = '1.4.2'
     nacosClientVerison = '1.3.0'
     druidVersion = '1.2.6'
     springbootVerison = '2.5.5'
@@ -21,11 +21,12 @@ subprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        uri 'https://maven.aliyun.com/repository/public/'
     }
     dependencies {
-        implementation 'com.google.protobuf:protobuf-java:3.18.0'
         implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
         implementation "org.springframework.boot:spring-boot-starter:${springbootVerison}"
+        implementation 'com.alibaba.spring:spring-context-support:1.0.11'
 
         implementation 'org.mybatis:mybatis:3.5.7'
         implementation "com.alibaba:druid:${druidVersion}"
@@ -37,19 +38,13 @@ subprojects {
         }
         implementation "org.apache.dubbo:dubbo-spring-boot-starter:${dubboVersion}"
         implementation "org.apache.dubbo:dubbo-config-spring:${dubboVersion}"
-        implementation 'com.alibaba.spring:spring-context-support:1.0.11'
-
-        implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
-
         implementation "org.apache.dubbo:dubbo-registry-nacos:${dubboVersion}"
 
+        implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
 
+        implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
         implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
-
-
         implementation 'io.netty:netty-all:4.1.32.Final'
-
-
         implementation "org.slf4j:slf4j-api:${slf4jVersion}"
         implementation "ch.qos.logback:logback-core:${logbackVersion}"
         implementation "ch.qos.logback:logback-classic:${logbackVersion}"
