dubbo已经调通，但是seata还是不行

--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,13 +1,29 @@
 server:
-  port: 8880
+  port: 8888
 spring:
   application:
     name: accout
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/wf?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/micro-server?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     username: root
     password: rr998xhz1997
+mybatis:
+  # 搜索指定包别名
+  type-aliases-package: cn.piao888.account
+  # 配置mapper的扫描,我到所有的mapper.xml映射文件
+  mapper-locations: classpath:mapper/*Mapper.xml
+  #加载全局的配置文件
+#  config-location: classpath:mapper/mybatis-config.xml
+dubbo:
+  application:
+    name: dubbo-account-example
+  protocol:
+    name: dubbo
+    port: 8828
+  registry:
+    id: dubbo-account-example-registry
+    address: nacos://127.0.0.1:8848
 seata:
   #enabled: true
   application-id: ${spring.application.name}
@@ -20,4 +36,3 @@ seata:
 nacos:
   discovery:
     server-addr: localhost:8848
-    group: SEATA_GROUP
