--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -8,12 +8,18 @@ spring:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/wf?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/micro-server?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     username: root
     password: rr998xhz1997
   application:
     name: storage
-
+mybatis:
+  # 搜索指定包别名
+  type-aliases-package: cn.piao888.storage
+  # 配置mapper的扫描,我到所有的mapper.xml映射文件
+  mapper-locations: classpath:mapper/*Mapper.xml
+  #加载全局的配置文件
+#  config-location: classpath:mapper/mybatis-config.xml
 dubbo:
   application:
     id: dubbo-storage-example
@@ -26,28 +32,21 @@ dubbo:
     port: 20888
   registry:
     id: dubbo-storage-example-registry
-    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+    address: nacos://127.0.0.1:8848
   config-center:
-    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+    address: nacos://127.0.0.1:8848
   metadata-report:
-    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+    #    address: nacos://127.0.0.1:8848?namespace=7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+    address: nacos://127.0.0.1:8848
 
 seata:
   enabled: true
-  application-id:  ${spring.application.name}
+  application-id: ${spring.application.name}
   tx-service-group: storage-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
   service:
     vgroup-mapping:
       storage-service-seata-service-group: default
   #      规范的通过 Nacos获取seata-server服务信息
-  config:
-    type: nacos
-    nacos:
-#      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
-      server-addr: localhost:8848
-      group: SEATA_GROUP
-    file:
-      name:
   registry:
     type: nacos
     nacos:
