--- a/account/build.gradle
+++ b/account/build.gradle
@@ -10,7 +10,7 @@
 
 plugins {
     id "java"
-    id 'org.springframework.boot' version '2.5.5'
+    id 'org.springframework.boot' version '2.3.12.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 //    id 'com.google.protobuf' version '0.8.14'
 }
@@ -76,6 +76,9 @@ dependencies {
 /*    implementation 'com.google.protobuf:protobuf-java:3.19.4'
     implementation 'com.google.protobuf:protoc:3.21.12'*/
     implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+    implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.4'
+    implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
+    implementation 'org.apache.commons:commons-lang3:3.5'
 }
 
 test {
