--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 ext {
     dubboVersion = '3.0.3'
     seataVersion = '1.4.2'
-    nacosClientVerison = '1.3.0'
+    nacosClientVerison = '2.0.3'
     druidVersion = '1.2.6'
-    springbootVerison = '2.5.5'
+    springbootVerison = '2.3.12.RELEASE'
     lombokVersion = '1.18.2'
     slf4jVersion = '1.7.22'
     logbackVersion = '1.1.10'
@@ -40,9 +40,7 @@ subprojects {
         implementation "org.apache.dubbo:dubbo-config-spring:${dubboVersion}"
         implementation "org.apache.dubbo:dubbo-registry-nacos:${dubboVersion}"
 
-        implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
 
-        implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
         implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
         implementation 'io.netty:netty-all:4.1.32.Final'
         implementation "org.slf4j:slf4j-api:${slf4jVersion}"
