--- a/business/build.gradle
+++ b/business/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.5'
+    id 'org.springframework.boot' version '2.3.12.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
@@ -15,6 +15,9 @@ repositories {
 dependencies {
     implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
+    implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
+    implementation 'org.apache.commons:commons-lang3:3.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
