--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -1,31 +1,32 @@
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'org.springframework.boot' version '2.5.5'
+    id 'org.springframework.boot' version '2.3.12.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
-
+repositories {
+    mavenCentral()
+    mavenLocal()
+    uri 'https://maven.aliyun.com/repository/public/'
+}
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.4"
-        mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2.2.0.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR12"
+        mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2.2.7.RELEASE"
     }
-}
-repositories {
-    mavenCentral()
-    mavenLocal()
 }
 
 dependencies {
+
     implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery"
-    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
+    implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery:2.2.7.RELEASE"
+    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config:2.2.7.RELEASE'
 }
 
 test {
