--- a/account/src/main/resources/registry.conf
+++ b/account/src/main/resources/registry.conf
@@ -5,13 +5,13 @@ registry {
     serverAddr = "localhost:8848"
   }
 }
-config {
-  # file、nacos 、apollo、zk、consul、etcd3
-  type = "nacos"
-  nacos {
-    serverAddr = "localhost:8848"
-    dataId = "seataServer.properties"
-    namespace = "d6d8f8e5-f986-4856-a2e8-004e60cd373e"
-    group = "SEATA_GROUP"
-  }
-}
+# config {
+#   # file、nacos 、apollo、zk、consul、etcd3
+#   type = "nacos"
+#   nacos {
+#     serverAddr = "localhost:8848"
+#     dataId = "seataServer.properties"
+#     namespace = "d6d8f8e5-f986-4856-a2e8-004e60cd373e"
+#     group = "SEATA_GROUP"
+#   }
+# }
