--- a/account/src/main/resources/file.conf
+++ b/account/src/main/resources/file.conf
@@ -1,4 +1,4 @@
 service {
       vgroupMapping.default_tx_group = "default"
-#       default.grouplist = "127.0.0.1:8091"
+      default.grouplist = "127.0.0.1:8091"
    }
