--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 ext {
-    dubboVersion = '3.0.3'
+    dubboVersion = '2.7.8'
     seataVersion = '1.4.2'
     nacosClientVerison = '2.0.3'
     druidVersion = '1.2.6'
@@ -28,11 +28,12 @@ subprojects {
             implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
             implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
             implementation "org.springframework.boot:spring-boot-starter:${springbootVerison}"
-            implementation 'com.alibaba.spring:spring-context-support:1.0.11'
+            implementation 'com.alibaba.spring:spring-context-support:1.0.10'
+            implementation "com.alibaba:druid:${druidVersion}"
 
             implementation 'org.mybatis:mybatis:3.5.7'
             implementation 'mysql:mysql-connector-java:8.0.26'
-            implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+            implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
 
             implementation("org.apache.dubbo:dubbo:${dubboVersion}") {
                 exclude group: 'org.springframework', module: 'spring'
@@ -43,7 +44,7 @@ subprojects {
 
 
             implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
-            implementation 'io.netty:netty-all:4.1.32.Final'
+            implementation 'io.netty:netty-all:4.1.42.Final'
             implementation "org.slf4j:slf4j-api:${slf4jVersion}"
             implementation "ch.qos.logback:logback-core:${logbackVersion}"
             implementation "ch.qos.logback:logback-classic:${logbackVersion}"
