--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -42,40 +42,21 @@ dubbo:
     #    address: nacos://127.0.0.1:8848?namespace=d6d8f8e5-f986-4856-a2e8-004e60cd373e
     address: nacos://127.0.0.1:8848
 
-#seata:
-#  enabled: true
-#  application-id: ${spring.application.name}
-#  tx-service-group: storage-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
-##  service:
-##    vgroup-mapping:
-##      storage-service-seata-service-group: default
-#  #      规范的通过 Nacos获取seata-server服务信息
-#  registry:
-#    type: nacos
-#    nacos:
-#      server-addr: localhost:8848
-#      group: SEATA_GROUP
-#      application: seata-server
-#  #      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
-#      cluster: default
-#  config:
-#    type: nacos
-#    nacos:
-#      namespace: d6d8f8e5-f986-4856-a2e8-004e60cd373e
-#      server-addr: localhost:8848
-#      dataId: seataServer.properties
-#      group: SEATA_GROUP
-#  enable-auto-data-source-proxy: true
-#  data-source-proxy-mode: AT
 seata:
   enabled: true
-  application-id: storage-seata-example
+  application-id: ${spring.application.name}
   tx-service-group: storage-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
+#  service:
+#    vgroup-mapping:
+#      storage-service-seata-service-group: default
+  #      规范的通过 Nacos获取seata-server服务信息
   registry:
     type: nacos
     nacos:
       server-addr: localhost:8848
-      #      namespace: d6d8f8e5-f986-4856-a2e8-004e60cd373e
+      group: SEATA_GROUP
+      application: seata-server
+  #      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
       cluster: default
   config:
     type: nacos
