--- a/user/build.gradle
+++ b/user/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'org.springframework.boot' version '2.3.12.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
-
 repositories {
     mavenLocal()
     mavenCentral()
@@ -23,11 +22,7 @@ dependencyManagement {
 
 dependencies {
     implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery:2.2.7.RELEASE"
-    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config:2.2.7.RELEASE'
-    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation project(':common')
 }
 
 test {
