--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8881
+  port: 8888
 
 spring:
   cloud:
@@ -12,18 +12,18 @@ spring:
     username: root
     password: rr998xhz1997
   application:
-    name: storage
+    name: user
 mybatis:
   # 搜索指定包别名
-  type-aliases-package: cn.piao888.storage.mapper
+  type-aliases-package: cn.piao888.user
   # 配置mapper的扫描,我到所有的mapper.xml映射文件
   mapper-locations: classpath:mapper/*Mapper.xml
   #加载全局的配置文件
 #  config-location: classpath:mapper/mybatis-config.xml
 dubbo:
   application:
-    id: dubbo-storage-example
-    name: dubbo-storage-example
+    id: dubbo-user-example
+    name: dubbo-user-example
     qosEnable: false
     metadata-type: remote
   protocol:
@@ -31,7 +31,7 @@ dubbo:
     name: dubbo
     port: 20888
   registry:
-    id: dubbo-storage-example-registry
+    id: dubbo-user-example-registry
     #    address: nacos://127.0.0.1:8848?namespace=d6d8f8e5-f986-4856-a2e8-004e60cd373e
     address: nacos://127.0.0.1:8848
   config-center:
@@ -45,10 +45,10 @@ dubbo:
 seata:
   enabled: true
   application-id: ${spring.application.name}
-  tx-service-group: storage-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
-#  service:
-#    vgroup-mapping:
-#      storage-service-seata-service-group: default
+  tx-service-group: user-service-seata-service-group # 事务群组（可以每个应用独立取名，也可以使用相同的名字）
+  #  service:
+  #    vgroup-mapping:
+  #      storage-service-seata-service-group: default
   #      规范的通过 Nacos获取seata-server服务信息
   registry:
     type: nacos
@@ -56,7 +56,7 @@ seata:
       server-addr: localhost:8848
       group: SEATA_GROUP
       application: seata-server
-  #      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
+      #      namespace: 7b6ccc3a-704d-47c8-bb0f-2edfa03524db
       cluster: default
   config:
     type: nacos
