--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8888
+  port: 8882
 
 spring:
   cloud:
@@ -67,3 +67,11 @@ seata:
       group: SEATA_GROUP
   enable-auto-data-source-proxy: true
   data-source-proxy-mode: AT
+# token配置
+token:
+  # 令牌自定义标识
+  header: Authorization
+  # 令牌密钥
+  secret: abcdefghijklmnopqrstuvwxyz
+  # 令牌有效期（默认30分钟）
+  expireTime: 30
