--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ ext {
     logbackVersion = '1.1.10'
 }
 subprojects {
-    if (project.name!="common") {
+    if (project.name != "common" && project.name != "gatway") {
         apply plugin: 'java'
         apply plugin: 'maven-publish'
         sourceCompatibility = JavaVersion.VERSION_11
@@ -25,25 +25,22 @@ subprojects {
             uri 'https://maven.aliyun.com/repository/public/'
         }
         dependencies {
-            implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
-            implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
             implementation "org.springframework.boot:spring-boot-starter:${springbootVerison}"
             implementation 'com.alibaba.spring:spring-context-support:1.0.10'
-            implementation "com.alibaba:druid:${druidVersion}"
 
-            implementation 'org.mybatis:mybatis:3.5.7'
             implementation 'mysql:mysql-connector-java:8.0.26'
-            implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
+            implementation 'com.baomidou:mybatis-plus-boot-starter:3.4.0'
 
+            implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
+            implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+            implementation "com.alibaba:druid:${druidVersion}"
+            implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
             implementation("org.apache.dubbo:dubbo:${dubboVersion}") {
                 exclude group: 'org.springframework', module: 'spring'
             }
             implementation "org.apache.dubbo:dubbo-spring-boot-starter:${dubboVersion}"
             implementation "org.apache.dubbo:dubbo-config-spring:${dubboVersion}"
             implementation "org.apache.dubbo:dubbo-registry-nacos:${dubboVersion}"
-
-
-            implementation "io.seata:seata-spring-boot-starter:${seataVersion}"
             implementation 'io.netty:netty-all:4.1.42.Final'
             implementation "org.slf4j:slf4j-api:${slf4jVersion}"
             implementation "ch.qos.logback:logback-core:${logbackVersion}"
