--- a/gatway/build.gradle
+++ b/gatway/build.gradle
@@ -1,22 +1,54 @@
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.0'
+//        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
+//    }
+//}
 plugins {
-    id 'org.springframework.boot' version '2.3.12.RELEASE'
+    id 'java'
+    id 'org.springframework.boot' version '2.3.7.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+ext {
+    springbootVerison = '2.3.12.RELEASE'
+    slf4jVersion = '1.7.22'
+    fastjsonVersion = "1.2.75"
+    set('springCloudVersion', "Hoxton.SR8")
+}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2.2.5.RELEASE'
+    }
+}
+apply plugin: 'java'
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
+ext {
+    springbootVerison = '2.3.12.RELEASE'
+    slf4jVersion = '1.7.22'
+    fastjsonVersion = "1.2.75"
+}
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+//    implementation platform('org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR12') // 使用Spring Cloud版本管理器
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+//    implementation 'io.projectreactor.netty:reactor-netty'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+//    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
+//    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
 
 test {
