--- a/user/build.gradle
+++ b/user/build.gradle
@@ -21,7 +21,13 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+//    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+    implementation 'org.springframework.cloud:spring-cloud-starter-security'
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation "io.jsonwebtoken:jjwt:0.9.0"
+//    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+//    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
     implementation project(':common')
 }
 
