本来成功的 不知道为啥 登陆页上不去了

--- a/business/build.gradle
+++ b/business/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+    implementation project(":common")
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
     implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
