--- a/user/build.gradle
+++ b/user/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 //    implementation "io.jsonwebtoken:jjwt:0.9.0"
 //    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
 //    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation project(':common')
 }
 
