--- a/resources/build.gradle
+++ b/resources/build.gradle
@@ -17,6 +17,8 @@ plugins {
 
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 ext {
     springbootVerison = '2.3.12.RELEASE'
     slf4jVersion = '1.7.22'
@@ -28,12 +30,13 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
-    api "org.slf4j:slf4j-api:${slf4jVersion}"
-    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-    implementation "com.alibaba:fastjson:${fastjsonVersion}"
-    implementation 'org.projectlombok:lombok:1.18.20'
-    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.12'
+    api project(":common")
+    api 'org.springframework.boot:spring-boot-starter-security'
+    api 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    api 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    api 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+    api 'com.auth0:java-jwt:3.10.3'
+
 }
 publishing {
     /*
