--- a/account/build.gradle
+++ b/account/build.gradle
@@ -17,7 +17,8 @@ plugins {
 
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 /*sourceSets {
     main {
@@ -71,6 +72,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(":resources")
+    implementation project(":common")
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 /*    implementation 'com.google.protobuf:protobuf-java:3.19.4'
