--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,35 +1,45 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.0'
+        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
+    }
+}
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'org.springframework.boot' version '2.3.12.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.5.5'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE' // Spring Cloud版本管理器插件
 }
 repositories {
     mavenLocal()
     mavenCentral()
-    uri 'https://maven.aliyun.com/repository/public/'
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://repo.spring.io/milestone' } // 添加 Spring 仓库
+    maven { url 'https://repo.spring.io/'}
 }
 group = 'cn.piao888'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR12"
+        mavenBom "org.springframework.boot:spring-boot-dependencies:3.1.0-RC1"
         mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2.2.7.RELEASE"
     }
 }
 
 dependencies {
 //    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
-    implementation 'org.springframework.cloud:spring-cloud-starter-security'
-    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation project(":common")
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation "io.jsonwebtoken:jjwt:0.9.0"
 //    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
 //    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation project(':common')
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
 }
 
 test {
