--- a/account/build.gradle
+++ b/account/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 /*    implementation 'com.google.protobuf:protobuf-java:3.19.4'
     implementation 'com.google.protobuf:protoc:3.21.12'*/
-    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+//    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+    implementation project(':common')
     implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.4'
     implementation "com.alibaba.nacos:nacos-client:${nacosClientVerison}"
     implementation 'org.apache.commons:commons-lang3:3.5'
