--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
     password: rr998xhz1997
   application:
     name: user
-mybatis:
+mybatis-plus:
   # 搜索指定包别名
-  type-aliases-package: cn.piao888.user
+  typeAliasesPackage: cn.piao888.user
   # 配置mapper的扫描,我到所有的mapper.xml映射文件
   mapper-locations: classpath:mapper/*Mapper.xml
   #加载全局的配置文件
