--- a/order/build.gradle
+++ b/order/build.gradle
@@ -13,7 +13,8 @@ repositories {
 
 dependencies {
     implementation project(":resources")
-    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+//    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
+    implementation project(":common")
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
