--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,12 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.0'
-        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
-    }
-}
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.0'
+//        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
+//    }
+//}
 plugins {
     id 'java'
     id 'maven-publish'
@@ -34,7 +34,8 @@ dependencyManagement {
 dependencies {
 //    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
     implementation project(":common")
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.4'
 //    implementation "io.jsonwebtoken:jjwt:0.9.0"
 //    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
 //    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
