--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'order'
 include 'storage'
 include 'business'
 include 'common'
+include 'common:common-core'
+include 'common:client-auth-common'
 include 'user'
 include 'gatway'
-include 'resources'
