--- a/order/build.gradle
+++ b/order/build.gradle
@@ -12,9 +12,9 @@ repositories {
 }
 
 dependencies {
-    implementation project(":resources")
+    implementation project(":common:client-auth-common")
 //    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
-    implementation project(":common")
+    implementation project(":common:common-core")
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'com.alibaba.boot:nacos-discovery-spring-boot-starter:0.2.2'
