--- a/user/build.gradle
+++ b/user/build.gradle
@@ -33,7 +33,8 @@ dependencyManagement {
 
 dependencies {
 //    implementation 'cn.piao888:common:0.0.1-SNAPSHOT'
-    implementation project(":common")
+    implementation project(":common:client-auth-common")
+    implementation project(":common:common-core")
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.4'
 //    implementation "io.jsonwebtoken:jjwt:0.9.0"
