--- a/common/client-auth-common/build.gradle
+++ b/common/client-auth-common/build.gradle
@@ -1,12 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.5'
-        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
-    }
-}
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.5'
+//        classpath 'io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE' // Spring Cloud版本管理器插件
+//    }
+//}
 plugins {
     id 'java'
     id 'java-library'
@@ -30,8 +30,8 @@ repositories {
 dependencies {
     api "org.springframework.boot:spring-boot-starter-security"
     api 'cn.piao888:common-core:0.0.1-SNAPSHOT'
-    api "org.springframework.boot:spring-boot-starter-web:${springbootVerison}"
-    api "org.springframework.boot:spring-boot-starter:${springbootVerison}"
+    api "org.springframework.boot:spring-boot-starter-web"
+    api "org.springframework.boot:spring-boot-starter"
     api "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
     api 'mysql:mysql-connector-java:8.0.26'
     api "com.alibaba:druid:${druidVersion}"
