--- a/common/client-auth-common/build.gradle
+++ b/common/client-auth-common/build.gradle
@@ -31,17 +31,18 @@ dependencies {
     api "org.springframework.boot:spring-boot-starter-security"
     api 'cn.piao888:common-core:0.0.1-SNAPSHOT'
     api "org.springframework.boot:spring-boot-starter-web"
-    api "org.springframework.boot:spring-boot-starter"
     api "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    api 'mysql:mysql-connector-java:8.0.26'
-    api "com.alibaba:druid:${druidVersion}"
-    api 'com.baomidou:mybatis-plus-boot-starter:3.4.0'
     api "org.slf4j:slf4j-api:${slf4jVersion}"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     api "com.alibaba:fastjson:${fastjsonVersion}"
     api 'org.projectlombok:lombok:1.18.20'
-    api 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.12'
     api 'com.alibaba.spring:spring-context-support:1.0.10'
+}
+bootJar {
+    enabled = false
+}
+jar {
+    enabled = true
 }
 publishing {
     /*
@@ -74,7 +75,7 @@ publishing {
 //        maven{
 //            def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
 //            url localMavenRepo
-//        }
+//        }myLibrary
     }
 }
 test {
