--- a/common/common-core/build.gradle
+++ b/common/common-core/build.gradle
@@ -40,6 +40,12 @@ dependencies {
     api 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.12'
     api 'com.alibaba.spring:spring-context-support:1.0.10'
 }
+bootJar {
+    enabled = false
+}
+jar {
+    enabled = true
+}
 publishing {
     /*
 
